// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleStoryshots Organisms/Profile Profile Highlight 1`] = `
<div
  class="rpl-profile-highlight"
>
  <img
    alt=""
    class="rpl-profile-highlight__image"
    src="http://placehold.it/156x156"
  />
   
  <div
    class="rpl-profile-highlight__content"
  >
    <div>
      &lt;p&gt;HTML Content&lt;/p&gt;
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Organisms/Profile Profile Highlight Honour Roll 1`] = `
<div
  class="rpl-profile-highlight rpl-profile-highlight-honour-roll"
>
  <img
    alt=""
    class="rpl-profile-highlight__image"
    src="http://placehold.it/156x156"
  />
   
  <div
    class="rpl-profile-highlight__content"
  >
    <dl
      class="rpl-description-list"
    >
      <div
        class="rpl-description-list__row"
      >
        <dt
          class="rpl-description-list__cell rpl-description-list__term"
        >
          Inducted:
        </dt>
         
        <dd
          class="rpl-description-list__cell rpl-description-list__description"
        >
          2018
        </dd>
      </div>
      <div
        class="rpl-description-list__row"
      >
        <dt
          class="rpl-description-list__cell rpl-description-list__term"
        >
          Category:
        </dt>
         
        <dd
          class="rpl-description-list__cell rpl-description-list__description"
        >
          Local Champion
        </dd>
      </div>
    </dl>
  </div>
</div>
`;
